fixed spacing between filter buttons

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -2736,20 +2736,18 @@ code {
 }
 
 .product-filter__container {
-  @include u-margin-top(0, !important);
-  &:nth-child(3) button {
-    @include u-padding-y('105');
-  }
+  @include u-margin-top(1, !important);
+  &:nth-child(3) {
+    button {
+      padding-bottom: .6rem;
+      padding-top: .7rem;
+    }
+  } 
 }
-.product-filter__button {
 
-  // @include u-width(15);
-  // @include at-media('tablet') {
-  //   @include u-width('card');
-  // } 
-  // @include u-padding(1);
-  // @include u-margin-top(0);
-  // @include u-height(4);
+.product-filter__button {
+  @include u-padding-left(1, !important);
+  @include u-margin-top(0);
 }
 
 .usa-accordion {
@@ -2840,7 +2838,7 @@ code {
 }
 
 .background-right {
-  background-position: right 2% center;
+  background-position: right 5% center;
 }
 
 .dropdown-menu {
